@@ -71,6 +71,7 @@ if common.windows_check():
     "lock_tray" : False,
     "max_half_open" : 8,
     "max_active_torrents" : 8,
+    "max_active_torrents_tmp" : 8,
     "max_connections_global" : 200,
     "max_connections_per_torrent" : -1,
     "max_download_speed" : -1,
@@ -183,6 +184,7 @@ else:
     "lock_tray" : False,
     "max_half_open" : 8,
     "max_active_torrents" : 8,
+    "max_active_torrents_tmp" : 8,
     "max_connections_global" : 200,
     "max_connections_per_torrent" : -1,
     "max_download_speed" : -1,
