@@ -5,7 +5,8 @@ Deluge 0.5.7 (xx November 2007)
   * Add torrent in paused state option
   * Fix bug where loaded plugins were forgotten if Deluge crashed
   * Fix ratio bugs (hopefully for the last time)
-  * Only show file selection dialog if torrent has more than 1 file
+  * Add preference to only show file selection popup if torrent has multiple files
+  * Fix pause all and resume all bugs
   * Scheduler plugin revamp by Ben Klein
   * Fix ETA from going backwards
   * UI warning on full HD - no longer just silently pauses torrents
